Added styles folder with new font families

--- a/cookie-animation/index.html
+++ b/cookie-animation/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie Animation</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/index.css">
   </head>
   <body>
 
     <div class="cookie-container">
       <?xml version="1.0" encoding="UTF-8" standalone="no"?>
       <svg class="cookie-svg"
+        title="This is a cookie image"
         width="228.397px"
         height="223.35118px"
         viewBox="0 0 60.43004 59.095"
